# obsidianki-mcp

./: README.md  direct.py  main.py  pyproject.toml
